dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -3,8 +3,17 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>異常履歴データシート（ワーストライン色分け・一括解除）</title>
+<title>異常履歴データシート（選択強調＋ボタンサイズ調整バー）</title>
 <style>
+  :root{
+    --pill-scale: 1;              /* ボタンサイズ倍率（0.8〜1.4） */
+    --pill-pad-v: calc(14px * var(--pill-scale));
+    --pill-pad-h: calc(18px * var(--pill-scale));
+    --pill-font:  calc(1rem * var(--pill-scale));
+    --pill-sub:   calc(.85rem * var(--pill-scale));
+    --pill-minw:  calc(180px * var(--pill-scale));
+    --spark-h:    calc(54px * var(--pill-scale));
+  }
   *{margin:0;padding:0;box-sizing:border-box}
   body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI','Hiragino Sans',sans-serif;background:#f5f5f7;color:#1d1d1f}
 
@@ -37,6 +46,11 @@
   .seg button.active{background:#667eea;color:#fff}
   .mode-hint{font-size:.85rem;color:#64748b}
 
+  /* 調整バー */
+  .tuner{background:#fff;border-radius:12px;padding:14px 20px;margin-bottom:16px;box-shadow:0 2px 8px rgba(0,0,0,.06);display:flex;gap:16px;align-items:center;flex-wrap:wrap}
+  .tuner label{font-weight:600;color:#334155}
+  .tuner .val{min-width:4ch;text-align:right;color:#667eea;font-weight:700}
+
   /* 部署横並び＋展開パネル */
   .dept-filter{background:#fff;border-radius:12px;padding:20px;margin-bottom:20px;box-shadow:0 2px 8px rgba(0,0,0,.08)}
   .dept-filter-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;gap:10px;flex-wrap:wrap}
@@ -46,25 +60,42 @@
 
   .dept-bar{display:flex;flex-wrap:wrap;gap:10px;align-items:flex-start}
   .btn-pill{
+    --bd: 2px;
     position:relative; overflow:hidden;
-    padding:14px 18px; border:2px solid #e0e0e0; background:#fff; border-radius:10px;
-    cursor:pointer; font-size:1rem; font-weight:700; transition:.2s; text-align:center; color:#1d1d1f;
-    min-width:180px;
+    padding:var(--pill-pad-v) var(--pill-pad-h);
+    border:var(--bd) solid #e0e0e0; background:#fff; border-radius:10px;
+    cursor:pointer; font-size:var(--pill-font); font-weight:700; transition:.15s ease; text-align:center; color:#1d1d1f;
+    min-width:var(--pill-minw);
   }
   .btn-pill:hover{border-color:#667eea;background:#f8f9ff}
-  /* 選択しても白背景のまま（スパークラインが隠れない） */
-  .btn-pill.active{border-color:#667eea;background:#fff;color:#1d1d1f}
 
-  /* ワースト色分け（薄背景＋強め枠でスパークラインが透ける） */
+  /* 選択強調：アウトライン＋軽いグロー＋リボン */
+  .btn-pill.active{
+    border-color:#3b82f6;
+    box-shadow:0 0 0 3px rgba(59,130,246,.25), 0 4px 16px rgba(59,130,246,.15);
+    background:#fff;
+  }
+  .btn-pill.active .ribbon{
+    display:inline-flex;
+  }
+  .ribbon{
+    position:absolute; top:6px; right:6px;
+    display:none; align-items:center; gap:4px;
+    padding:2px 6px; font-size:12px; font-weight:700; color:#0b6cff;
+    background:rgba(59,130,246,.12); border:1px solid rgba(59,130,246,.35);
+    border-radius:999px; z-index:2;
+  }
+
+  /* ワースト色分け（ライン） */
   .btn-pill.rank-1{ background:rgba(239,68,68,.16); border-color:#ef4444; }
   .btn-pill.rank-2{ background:rgba(245,158,11,.16); border-color:#f59e0b; }
   .btn-pill.rank-3{ background:rgba(234,179,8,.16);  border-color:#eab308; }
 
   /* スパークライン（中央重ね） */
-  .btn-pill .sparkline{position:absolute; top:50%; left:6px; right:6px; transform:translateY(-50%); height:54px; opacity:.72; pointer-events:none; z-index:0}
-  .btn-pill > .title, .btn-pill > .sub{position:relative; z-index:1}
+  .btn-pill .sparkline{position:absolute; top:50%; left:6px; right:6px; transform:translateY(-50%); height:var(--spark-h); opacity:.72; pointer-events:none; z-index:0}
+  .btn-pill > .title, .btn-pill > .sub, .btn-pill > .ribbon{position:relative; z-index:1}
   .btn-pill .title{text-align:center}
-  .btn-pill .sub{font-size:.85rem; opacity:.9; margin-top:3px}
+  .btn-pill .sub{font-size:var(--pill-sub); opacity:.9; margin-top:3px}
 
   .expand-panel{margin-top:14px; border:1px solid #e6e8ef; border-radius:10px; display:none}
   .expand-panel.open{display:block}
@@ -81,7 +112,7 @@
   .display-count-selector{display:flex;align-items:center;gap:8px}
   .display-count-selector select{padding:6px 12px;border:2px solid #e0e0e0;border-radius:6px;background:#fff;cursor:pointer;font-size:.9rem;transition:.2s}
   .display-count-selector select:focus{outline:none;border-color:#667eea}
-  .table-wrapper{overflow-x:auto;max-height:calc(100vh - 400px);position:relative}
+  .table-wrapper{overflow-x:auto;max-height:calc(100vh - 440px);position:relative}
   table{width:100%;border-collapse:collapse;font-size:.9rem}
   thead{position:sticky;top:0;z-index:10;background:#fff}
   th{padding:12px 16px;text-align:left;background:#667eea;color:#fff;font-weight:600;white-space:nowrap;cursor:pointer;user-select:none;position:relative}
@@ -99,7 +130,7 @@
   .photo-btn:hover{background:#1976d2}
   .photo-btn:disabled{background:#ccc;cursor:not-allowed}
 
-  /* 詳細モーダル（従来デザイン） */
+  /* 詳細モーダル（従来） */
   .modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,.5);z-index:1000;align-items:center;justify-content:center}
   .modal.active{display:flex}
   .modal-content{background:#fff;border-radius:16px;max-width:900px;width:95%;max-height:90vh;overflow-y:auto;box-shadow:0 20px 60px rgba(0,0,0,.3)}
@@ -130,14 +161,14 @@
     .date-controls{flex-direction:column;align-items:stretch}
     .date-input-group{flex-direction:column}
     .date-quick-btn{width:100%}
-    .btn-pill{min-width:140px}
+    .btn-pill{min-width:calc(140px * var(--pill-scale))}
   }
 </style>
 </head>
 <body>
   <div class="header">
     <div class="header-content">
-      <h1>📊 異常履歴データシート（ワーストライン色分け・一括解除）</h1>
+      <h1>📊 異常履歴データシート（選択強調＋ボタンサイズ調整バー）</h1>
       <div class="header-actions">
         <button class="btn-header" id="btnSettings">⚙️ 表示設定</button>
         <button class="btn-header" id="btnExport">📥 CSV出力</button>
@@ -175,6 +206,14 @@
       </div>
     </div>
 
+    <!-- ボタンサイズ調整バー -->
+    <div class="tuner">
+      <label for="btnSize">ボタンサイズ</label>
+      <input type="range" id="btnSize" min="0.8" max="1.4" step="0.05" value="1.00" />
+      <span class="val" id="btnSizeVal">1.00×</span>
+      <span style="color:#64748b;">（部署・ライン・整理Noボタンを一括拡大 / 縮小）</span>
+    </div>
+
     <!-- 部署横並び -->
     <div class="dept-filter">
       <div class="dept-filter-header">
@@ -190,6 +229,7 @@
         <div class="panel-head">
           <div class="panel-title" id="panelTitle">選択中の部署</div>
           <div style="display:flex; gap:8px;">
+            <span id="selCounter" style="color:#64748b; font-weight:600;"></span>
             <button class="btn-tool" id="btnClosePanel">たたむ</button>
           </div>
         </div>
@@ -345,7 +385,6 @@
     return null;
   }
 
-  // 発生日時→だめなら createdAt
   function getOccurrenceMsLocal(it){
     if (it.occurrenceDateISO) {
       const time = it.occurrenceTimeNorm || '00:00';
@@ -383,7 +422,7 @@
         const e=new Date(start); e.setHours(e.getHours()+i+1); e.setMilliseconds(e.getMilliseconds()-1);
         bins.push({start:s.getTime(), end:e.getTime()});
       }
-      return {type:'hour', bins, markers:[9]}; // 8→17時の縦線
+      return {type:'hour', bins, markers:[9]};
     }else{
       const days = (sparkMode==='30d')?30:7;
       const bins=[];
@@ -397,7 +436,7 @@
     }
   }
 
-  // ====== スパークライン描画（略：前回版と同） ======
+  // ====== 描画（共通） ======
   function drawShiftMarker(ctx, canvas, opts){
     if(!opts || opts.markerIndex==null) return;
     const dpr=window.devicePixelRatio||1;
@@ -411,7 +450,7 @@
   function drawLineSpark(canvas, values, color='rgba(66,133,244,0.85)', opts={}){
     if(!canvas) return;
     const dpr=window.devicePixelRatio||1;
-    const cssW=canvas.clientWidth||120, cssH=canvas.clientHeight||54;
+    const cssW=canvas.clientWidth||120, cssH=canvas.clientHeight||parseFloat(getComputedStyle(canvas).height);
     canvas.width=Math.max(1,Math.floor(cssW*dpr));
     canvas.height=Math.max(1,Math.floor(cssH*dpr));
     const ctx=canvas.getContext('2d'); if(!ctx) return;
@@ -442,7 +481,7 @@
   function drawStackedSpark(canvas, seriesList, colors=['#8ab4f8','#a3e0c0','#f9c58d','#f7a9b8','#c9b6f2'], opts={}){
     if(!canvas) return;
     const dpr=window.devicePixelRatio||1;
-    const cssW=canvas.clientWidth||120, cssH=canvas.clientHeight||54;
+    const cssW=canvas.clientWidth||120, cssH=canvas.clientHeight||parseFloat(getComputedStyle(canvas).height);
     canvas.width=Math.max(1,Math.floor(cssW*dpr));
     canvas.height=Math.max(1,Math.floor(cssH*dpr));
     const ctx=canvas.getContext('2d'); if(!ctx) return;
@@ -558,7 +597,8 @@
       const total=counts.get(dept);
       const activeClass = selectedDepts.has(dept)?'active':'';
       return `
-        <div class="btn-pill ${activeClass}" data-role="dept" data-dept="${dept}">
+        <div class="btn-pill ${activeClass}" data-role="dept" data-dept="${dept}" title="${dept}">
+          <span class="ribbon">✓ 選択中</span>
           <canvas class="sparkline"></canvas>
           <div class="title">${dept}</div>
           <div class="sub">${total}件</div>
@@ -592,8 +632,9 @@
     const linesGrid=document.getElementById('linesGrid');
     const serialsHolder=document.getElementById('serialsHolder');
     const serialsGrid=document.getElementById('serialsGrid');
+    const selCounter = document.getElementById('selCounter');
 
-    if(!dept){ panel.classList.remove('open'); linesGrid.innerHTML=''; serialsGrid.innerHTML=''; serialsHolder.style.display='none'; return; }
+    if(!dept){ panel.classList.remove('open'); linesGrid.innerHTML=''; serialsGrid.innerHTML=''; serialsHolder.style.display='none'; selCounter.textContent=''; return; }
 
     title.textContent=`部署：${dept}`;
     panel.classList.add('open');
@@ -625,6 +666,7 @@
       const rankCls = top3[0]===line ? 'rank-1' : top3[1]===line ? 'rank-2' : top3[2]===line ? 'rank-3' : '';
       return `
         <div class="btn-pill ${active} ${rankCls}" data-role="line" data-dept="${dept}" data-line="${line}" title="合計停止時間: ${totalMin}分">
+          <span class="ribbon">✓ 選択中</span>
           <canvas class="sparkline"></canvas>
           <div class="title">${line}</div>
           <div class="sub">${totalCnt}件</div>
@@ -645,13 +687,15 @@
       });
     });
 
+    selCounter.textContent = `選択中：部署 ${selectedDepts.size}／ライン ${selectedLines.size}／整理No ${selectedSerials.size}`;
     drawAllSparklines();
   }
 
   function renderSerials(dept,line){
     const serialsHolder=document.getElementById('serialsHolder');
     const serialsGrid=document.getElementById('serialsGrid');
-    if(!dept || !line){ serialsHolder.style.display='none'; serialsGrid.innerHTML=''; return; }
+    const selCounter = document.getElementById('selCounter');
+    if(!dept || !line){ serialsHolder.style.display='none'; serialsGrid.innerHTML=''; selCounter.textContent = `選択中：部署 ${selectedDepts.size}／ライン ${selectedLines.size}／整理No ${selectedSerials.size}`; return; }
 
     const base=allData.filter(it=>(it.departmentNormalized||'未設定')===dept && (it.lineNameNormalized||'未設定')===line);
     const serialCounts=new Map();
@@ -667,6 +711,7 @@
       const active=selectedSerials.has(sk)?'active':'';
       return `
         <div class="btn-pill ${active}" data-role="serial" data-dept="${dept}" data-line="${line}" data-serial="${sn}">
+          <span class="ribbon">✓ 選択中</span>
           <canvas class="sparkline"></canvas>
           <div class="title">${sn}</div>
           <div class="sub">${total}件</div>
@@ -683,11 +728,14 @@
         if(isActive) selectedSerials.add(key); else selectedSerials.delete(key);
         applyFilters();
         drawAllSparklines();
+        const selCounter = document.getElementById('selCounter');
+        selCounter.textContent = `選択中：部署 ${selectedDepts.size}／ライン ${selectedLines.size}／整理No ${selectedSerials.size}`;
         e.stopPropagation();
       });
     });
 
     serialsHolder.style.display='block';
+    selCounter.textContent = `選択中：部署 ${selectedDepts.size}／ライン ${selectedLines.size}／整理No ${selectedSerials.size}`;
   }
 
   // ====== スパークライン再描画 ======
@@ -795,15 +843,13 @@
   }
 
   // ====== テーブル ======
-  function getOccurrenceMsLocalForFilter(it){ return getOccurrenceMsLocal(it); }
-
   function applyFilters(){
     let fromMs=null, toMs=null;
     if(dateFromStr && /^\d{4}-\d{2}-\d{2}$/.test(dateFromStr)){ fromMs=new Date(`${dateFromStr}T00:00:00`).getTime(); }
     if(dateToStr   && /^\d{4}-\d{2}-\d{2}$/.test(dateToStr)){   toMs  =new Date(`${dateToStr}T23:59:59.999`).getTime(); }
 
     filteredData = allData.filter(it=>{
-      const occMs = getOccurrenceMsLocalForFilter(it);
+      const occMs = getOccurrenceMsLocal(it);
       if(fromMs!==null || toMs!==null){
         if (occMs != null) {
           if(fromMs!==null && occMs<fromMs) return false;
@@ -973,6 +1019,7 @@
   function loadSettings(){
     const saved=localStorage.getItem('datasheetColumns');
     if(saved) visibleColumns=JSON.parse(saved);
+
     const savedLimit=localStorage.getItem('displayLimit');
     if(savedLimit!==null){
       const v=parseInt(savedLimit,10);
@@ -981,9 +1028,28 @@
         document.getElementById('displayCount').value=String(v);
       }
     }
+
+    // ボタンサイズ
+    const savedScale = parseFloat(localStorage.getItem('pillScale'));
+    const initial = (!Number.isNaN(savedScale) && savedScale>=0.8 && savedScale<=1.4) ? savedScale : 1.0;
+    document.documentElement.style.setProperty('--pill-scale', String(initial));
+    const sizeInput = document.getElementById('btnSize');
+    const sizeVal   = document.getElementById('btnSizeVal');
+    sizeInput.value = String(initial.toFixed(2));
+    sizeVal.textContent = `${initial.toFixed(2)}×`;
   }
   function saveSettings(){ localStorage.setItem('datasheetColumns', JSON.stringify(visibleColumns)); }
   function saveDisplayLimit(){ localStorage.setItem('displayLimit', String(displayLimit)); }
+
+  // ボタンサイズ調整
+  document.getElementById('btnSize').addEventListener('input', (e)=>{
+    const v = parseFloat(e.target.value || '1');
+    document.documentElement.style.setProperty('--pill-scale', String(v));
+    document.getElementById('btnSizeVal').textContent = `${v.toFixed(2)}×`;
+    localStorage.setItem('pillScale', String(v));
+    // スパークラインは高さが変わるため再描画
+    drawAllSparklines();
+  });
 
   document.getElementById('btnSettings').addEventListener('click', ()=>{
     const modal=document.getElementById('settingsModal');
@@ -1078,11 +1144,12 @@
     document.getElementById('linesGrid').innerHTML='';
     document.getElementById('serialsGrid').innerHTML='';
     document.getElementById('serialsHolder').style.display='none';
+    const selCounter = document.getElementById('selCounter'); if(selCounter) selCounter.textContent='';
     applyFilters();
     drawAllSparklines();
   });
 
-  // フィルタ/ソートリセット（従来機能のまま）
+  // フィルタ/ソートリセット
   document.getElementById('btnResetFilters').addEventListener('click',()=>{
     selectedDepts.clear(); selectedLines.clear(); selectedSerials.clear();
     document.querySelectorAll('.btn-pill.active').forEach(b=>b.classList.remove('active'));
@@ -1090,6 +1157,7 @@
     document.getElementById('dateFrom').value=''; document.getElementById('dateTo').value='';
     document.getElementById('btnYesterday').classList.remove('active'); document.getElementById('btnToday').classList.remove('active');
     autoRangeActive=false; sparkMode=lastManualSparkMode||'7d';
+    const selCounter = document.getElementById('selCounter'); if(selCounter) selCounter.textContent='';
     drawAllSparklines();
     applyFilters();
   });
