--- a/dateview.html
+++ b/dateview.html
@@ -693,18 +693,50 @@ function renderDeptBar(){
       </div>`;
   }).join('');
 
-  bar.querySelectorAll('[data-role="dept"]').forEach(btn=>{
-    btn.addEventListener('click', ()=>{
-      const dept=btn.getAttribute('data-dept');
-      const isActive=btn.classList.toggle('active');
-      if(isActive) selectedDepts.add(dept); else selectedDepts.delete(dept);
+bar.querySelectorAll('[data-role="dept"]').forEach(btn=>{
+  btn.addEventListener('click', ()=>{
+    const dept = btn.getAttribute('data-dept');
+    const isActive = btn.classList.toggle('active');
+
+    if (isActive) {
+      // ✅ 部署を選択：展開して配下を表示
+      selectedDepts.add(dept);
       focusedDept = dept;
-      renderExpandPanel(dept);  // ← 展開パネルも期間内データで描画されるよう次の修正とセット
-      applyFilters();
-      drawAllSparklines();
-      applyWorst3LineRanks(dept);
-    });
+      renderExpandPanel(dept);
+      applyWorst3LineRanks?.(dept); // 関数がある場合だけ呼ぶ
+    } else {
+      // ❌ 部署を解除：配下のライン/整理No選択もクリアし、展開パネルを閉じる
+      selectedDepts.delete(dept);
+
+      // 部署にぶら下がるキーを削除
+      for (const key of [...selectedLines]) {
+        if (key.startsWith(`${dept}||`)) selectedLines.delete(key);
+      }
+      for (const key of [...selectedSerials]) {
+        if (key.startsWith(`${dept}||`)) selectedSerials.delete(key);
+      }
+
+      // 展開UIを閉じて初期化
+      if (focusedDept === dept) focusedDept = null;
+      const panel = document.getElementById('expandPanel');
+      const linesGrid = document.getElementById('linesGrid');
+      const serialsGrid = document.getElementById('serialsGrid');
+      const serialsHolder = document.getElementById('serialsHolder');
+      const selCounter = document.getElementById('selCounter');
+
+      panel.classList.remove('open');
+      linesGrid.innerHTML = '';
+      serialsGrid.innerHTML = '';
+      serialsHolder.style.display = 'none';
+      if (selCounter) selCounter.textContent = '';
+    }
+
+    // 件数・テーブル・スパークを更新
+    applyFilters();
+    drawAllSparklines();
   });
+});
+
 
   drawAllSparklines();
   let timer=null;
