--- a/dateview.html
+++ b/dateview.html
@@ -607,7 +607,57 @@ body.dark .btn-pill .spark-dates .spark-end{
   ];
   let visibleColumns=['serialNo','department','lineName','occurrenceDate','occurrenceTime','stopMinutes','handler','photos','status'];
   let displayLimit=25;
+// ===== 部署スパーク色：今日の時間あたり件数 vs 直近平日30日の平均（時間あたり） =====
+function startOfDay(d){ const t=new Date(d); t.setHours(0,0,0,0); return t; }
+function endOfDay(d){ const t=new Date(d); t.setHours(23,59,59,999); return t; }
+function isWeekend(d){ const w=d.getDay(); return w===0 || w===6; }
 
+function getDeptTodayRate(dept){
+  const now = new Date();
+  const from = startOfDay(now).getTime();
+  const to   = now.getTime();
+  const hoursElapsed = Math.max(1, (to - from) / 3600000); // 最低1hで割る
+  let cnt = 0;
+  for(const it of allData){
+    if((it.departmentNormalized||'未設定')!==dept) continue;
+    const ms = getOccurrenceMsLocal(it);
+    if(ms==null) continue;
+    if(ms>=from && ms<=to) cnt++;
+  }
+  return cnt / hoursElapsed; // 件/時
+}
+
+function getDeptWeekday30hAvgRate(dept){
+  const today = startOfDay(new Date());
+  let days = 0, total = 0;
+
+  for(let i=1;i<=45 && days<30;i++){ // 余裕を持って45日さかのぼり→平日のみ30日集計
+    const d = new Date(today); d.setDate(d.getDate()-i);
+    if(isWeekend(d)) continue;
+    const from = startOfDay(d).getTime();
+    const to   = endOfDay(d).getTime();
+    let c = 0;
+    for(const it of allData){
+      if((it.departmentNormalized||'未設定')!==dept) continue;
+      const ms = getOccurrenceMsLocal(it);
+      if(ms==null) continue;
+      if(ms>=from && ms<=to) c++;
+    }
+    total += c;
+    days++;
+  }
+  if(days===0) return 0;
+  // 1日=24時間として時間あたり平均へ換算
+  return (total / days) / 24;
+}
+
+function getDeptSparkColor(dept){
+  const rateToday = getDeptTodayRate(dept);            // 今日の件/時
+  const baseRate  = getDeptWeekday30hAvgRate(dept);    // 平日30日平均の件/時
+  if(baseRate===0 && rateToday===0) return 'rgba(66,133,244,0.85)'; // データ無し→既定色
+  // 少なければ緑，多ければ赤
+  return (rateToday <= baseRate) ? 'rgba(22,163,74,0.95)' : 'rgba(239,68,68,0.95)';
+}
   /* ===== 認証・ロード ===== */
   async function checkAuth(){
     return new Promise(resolve=>{
@@ -1053,7 +1103,9 @@ if(opts.type==='hour' && typeof opts.markerIndex==='number'){
     });
     ctx.beginPath();
     for(let i=0;i<L;i++){ const x=pad+step*i, y=baseY-(sums[i]/maxSum)*height; if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y); }
-    ctx.strokeStyle='rgba(0,0,0,0.18)'; if(document.body.classList.contains('theme-dark')) ctx.strokeStyle='rgba(255,255,255,0.24)';
+    
+ctx.strokeStyle = (opts && opts.edgeColor) ? opts.edgeColor
+                : (document.body.classList.contains('theme-dark') ? 'rgba(255,255,255,0.24)' : 'rgba(0,0,0,0.18)');
     ctx.lineWidth=1*dpr; ctx.stroke();
   }
 function refreshPillsForDate(){
@@ -1156,13 +1208,16 @@ function refreshPillsForDate(){
     document.querySelectorAll('#deptBar [data-role="dept"]').forEach(btn=>{
       const dept=btn.getAttribute('data-dept');
       const canvas=btn.querySelector('.sparkline');
-      if(viewMode==='stack'){
+     const color = getDeptSparkColor(dept);
+       if(viewMode==='stack'){
         const stacks = [...(deptStack.get(dept)?.values()||[])];
         const fallback = stacks.length? stacks : [Array(binsLen).fill(0)];
-        drawStackedSpark(canvas, fallback, undefined, drawOpts(binsLen));
+      
+const o = drawOpts(binsLen); o.edgeColor = color;
+drawStackedSpark(canvas, fallback, undefined, o);
       }else{
         const vals=deptSeries.get(dept)||Array(binsLen).fill(0);
-        drawLineSpark(canvas, vals, 'rgba(66,133,244,0.85)', drawOpts(binsLen));
+        drawLineSpark(canvas, vals, color, drawOpts(binsLen));
       }
     });
 
