dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -614,7 +614,7 @@ function isWeekend(d){ const w=d.getDay(); return w===0 || w===6; }
 
 function getDeptTodayRate(dept){
   const now = new Date();
-  const from = startOfDay(now).getTime();
+  const from = setHours(8,0,0,0).getTime();
   const to   = now.getTime();
   const hoursElapsed = Math.max(1, (to - from) / 3600000); // 最低1hで割る
   let cnt = 0;
